<resources>
    <string name="app_name">拼多刷</string>
    <string name="home">首页</string>
    <string name="message">消息</string>
    <string name="str_mine">我的</string>
    <string name="str_subscribe">刷单</string>
    <string name="my">我的</string>
    <string name="same">同价</string>
    <string name="str_publish">发表</string>
    <string name="simple_price">单价</string>
    <string name="dianpu">店铺</string>
    <string name="keyword">关键词</string>
    <string name="tv_again_click_out">再按一次退出</string>
    <string name="dialog_albums">从相册中选择</string>
    <string name="dialog_photograph">拍摄</string>
    <string name="dialog_cancel">取消</string>
    <string name="permission_deny">权限被拒</string>
</resources>
