<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="bottom"
              android:background="#fff"
              android:orientation="vertical"
               >


    <Button
        android:id="@id/photo_photograph"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp10"
        android:text="@string/dialog_photograph"
        android:background="@color/white"
        android:textSize="@dimen/sp14"
        android:textAllCaps="false"
        android:textColor="@color/color_333333" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5dip"
        android:background="@color/c_DDDDDD" />
    <Button
        style="?android:attr/borderlessButtonStyle"
        android:id="@id/photo_albums"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp10"
        android:background="@color/white"
        android:text="@string/dialog_albums"
        android:textSize="@dimen/sp14"
        android:textAllCaps="false"
        android:textColor="@color/color_333333" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/c_707070" />
    <Button
        style="?android:attr/borderlessButtonStyle"
        android:id="@id/photo_cancel"
        android:padding="@dimen/dp10"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_cancel"
        android:textSize="@dimen/sp14"
        android:textAllCaps="false"
        android:textColor="@color/color_333333" />

</LinearLayout>
